# llm-test-with-deepeval

./: .editorconfig  .gitignore  makefile  pyproject.toml
src/: test_correctness.py  test_faithfulness.py  test_mcp_use.py  test_plan_quality.py  test_task_completion.py  test_tool_correctness.py
